[gd_scene load_steps=6 format=3 uid="uid://bw14nfwdnu41d"]

[ext_resource type="Script" path="res://Scenes/ContentManager/Custom_Editors/Scripts/MobgroupsEditor.gd" id="1_vrae5"]
[ext_resource type="Texture2D" uid="uid://c8ragmxitca47" path="res://Scenes/ContentManager/Mapeditor/Images/emptyTile.png" id="2_sxhq2"]
[ext_resource type="PackedScene" uid="uid://cba63mf23i3ky" path="res://Scenes/ContentManager/Custom_Editors/ReferencesEditor.tscn" id="3_8bh5q"]
[ext_resource type="PackedScene" uid="uid://d1h1rpwt8f807" path="res://Scenes/ContentManager/Custom_Widgets/Sprite_Selector_Popup.tscn" id="3_hpi3t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3w4h5"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="MobgroupsEditor" type="Control" node_paths=PackedStringArray("mobgroupImageDisplay", "IDTextLabel", "PathTextLabel", "NameTextEdit", "DescriptionTextEdit", "mobgroupSelector", "mob_list", "references_editor")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrae5")
mobgroupImageDisplay = NodePath("VBoxContainer/TabContainer/General/MobGroupImageDisplay")
IDTextLabel = NodePath("VBoxContainer/TabContainer/General/IDTextLabel")
PathTextLabel = NodePath("VBoxContainer/TabContainer/General/PathTextLabel")
NameTextEdit = NodePath("VBoxContainer/TabContainer/General/NameTextEdit")
DescriptionTextEdit = NodePath("VBoxContainer/TabContainer/General/DescriptionTextEdit")
mobgroupSelector = NodePath("Sprite_selector")
mob_list = NodePath("VBoxContainer/TabContainer/General/PanelContainer/ScrollContainer/MobList")
references_editor = NodePath("VBoxContainer/TabContainer/References")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 1

[node name="General" type="GridContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
columns = 2
metadata/_tab_index = 0

[node name="ImageLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
text = "Sprite:"

[node name="MobGroupImageDisplay" type="TextureRect" parent="VBoxContainer/TabContainer/General"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.4
texture = ExtResource("2_sxhq2")
expand_mode = 3

[node name="PathLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
text = "Sprite name"

[node name="PathTextLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="IDLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
text = "ID:"

[node name="IDTextLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="NameLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
text = "Name"

[node name="NameTextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/General"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
focus_next = NodePath("../DescriptionTextEdit")
focus_previous = NodePath("../MobGroupImageDisplay")
placeholder_text = "Basic zombies"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
focus_previous = NodePath("../NameTextEdit")
placeholder_text = "A group of basic zombies, representing a minor threat to the player"
wrap_mode = 1

[node name="ItemsLabel" type="Label" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
text = "Mobs"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/TabContainer/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3w4h5")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/General/PanelContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MobList" type="GridContainer" parent="VBoxContainer/TabContainer/General/PanelContainer/ScrollContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Drag mobs to this list from the left menu of the content editor. Once the list
has been made, you can assign this group to a quest, in the quest editor."
columns = 4

[node name="References" parent="VBoxContainer/TabContainer" instance=ExtResource("3_8bh5q")]
layout_mode = 2
metadata/_tab_index = 1

[node name="Sprite_selector" parent="." instance=ExtResource("3_hpi3t")]
visible = false

[connection signal="button_up" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="gui_input" from="VBoxContainer/TabContainer/General/MobGroupImageDisplay" to="." method="_on_mob_group_image_display_gui_input"]
[connection signal="sprite_selected_ok" from="Sprite_selector" to="." method="_on_sprite_selector_sprite_selected_ok"]
